[package]
name = "kumo-dmarc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bstr.workspace = true
chrono = { workspace = true }
config = { path = "../config" }
dns-resolver = { path = "../dns-resolver" }
instant-xml = { workspace = true }
glob = { workspace = true }
kumo-spf = { path = "../kumo-spf" }
linkme.workspace = true
mailparsing = { path = "../mailparsing" }
parking_lot = { workspace = true }
psl-utils = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt", "sync", "time"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "fast-rng"] }

[dev-dependencies]
k9 = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing"] }
