[package]
name = "kumo-log-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bounce-classify = {path="../bounce-classify"}
chrono = {version="0.4", default-features=false, features=["serde", "std"]}
data-encoding = "2.5"
mailparsing = {path="../mailparsing"}
rfc5321 = {path="../rfc5321", default-features=false}
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
uuid = {workspace=true, features=["serde"]}

[dev-dependencies]
k9 = "0.12"
