[package]
name = "kumo-log-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bounce-classify = {path="../bounce-classify"}
chrono = {version="0.4", default-features=false, features=["serde", "std"]}
data-encoding = {workspace=true}
mailparsing = {path="../mailparsing"}
rfc5321 = {path="../rfc5321", default-features=false}
serde = {workspace=true}
serde_json = "1.0"
uuid = {workspace=true, features=["serde"]}

[dev-dependencies]
k9 = "0.12"
