[package]
name = "kumo-log-types"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {workspace=true}
bounce-classify = {path="../bounce-classify"}
chrono = {workspace=true, default-features=false, features=["serde", "std"]}
data-encoding = {workspace=true}
kumo-address = {path="../kumo-address"}
mailparsing = {path="../mailparsing"}
rfc5321 = {path="../rfc5321", default-features=false}
serde = {workspace=true}
serde_json = {workspace=true}
serde_with.workspace = true
uuid = {workspace=true, features=["serde"]}
uuid-helper.workspace = true

[dev-dependencies]
k9 = {workspace=true}
