[package]
name = "kumo-machine-info"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
gethostname.workspace = true
in-container.workspace = true
libc.workspace = true
mac_address.workspace = true
machine-uid.workspace = true
num_cpus.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json = "1.0.138"
serde_with.workspace = true
sysinfo.workspace = true
tokio.workspace = true

[dev-dependencies]
mockito.workspace = true
tokio = { workspace=true, features = ["full"] }
