[package]
name = "kumo-prometheus"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
futures.workspace = true
map_vec = "0.5"
memchr = "2.5"
parking_lot = "0.12"
paste = "1.0"
prometheus = "0.13"
serde_json = "1.0"
tokio = {workspace=true, features=["rt", "time"]}
