[package]
name = "kumo-prometheus"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {workspace=true}
async-stream = {workspace=true}
futures = {workspace=true}
map_vec = {workspace=true}
memchr = {workspace=true}
parking_lot = {workspace=true}
pastey = {workspace=true}
prometheus = {workspace=true}
serde_json = {workspace=true}
tokio = {workspace=true, features=["rt", "time"]}
