[package]
name = "kumo-server-common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {workspace=true}
arc-swap = {workspace=true}
axum = {workspace=true}
axum-server = {workspace=true, features=["tls-rustls"]}
axum-streams = {workspace=true}
backtrace = {workspace=true}
cidr-map = {path="../cidr-map"}
clap = {workspace=true}
config = {path="../config"}
data-encoding = {workspace=true}
data-loader = {path="../data-loader"}
domain-map = {path="../domain-map"}
gethostname = {workspace=true}
human_bytes = {workspace=true}
kumo-api-types = {path="../kumo-api-types"}
kumo-prometheus = {path="../kumo-prometheus"}
kumo-server-lifecycle = {path="../kumo-server-lifecycle"}
kumo-server-memory = {path="../kumo-server-memory"}
kumo-server-runtime = {path="../kumo-server-runtime"}
libc = {workspace=true}
lruttl = {path="../lruttl"}
metrics = {workspace=true}
metrics-prometheus = {workspace=true}
metrics-tracing-context = {workspace=true}
mlua = {workspace=true, features=["vendored", "lua54", "async", "send", "serialize"]}
mod-amqp = {path="../mod-amqp"}
mod-digest = {path="../mod-digest"}
mod-dns-resolver = {path="../mod-dns-resolver"}
mod-encode = {path="../mod-encode"}
mod-filesystem = {path="../mod-filesystem"}
mod-http = {path="../mod-http"}
mod-kafka = {path="../mod-kafka"}
mod-memoize = {path="../mod-memoize"}
mod-regex = {path="../mod-regex"}
mod-redis = {path="../mod-redis"}
mod-serde = {path="../mod-serde"}
mod-sqlite = {path="../mod-sqlite"}
mod-string = {path="../mod-string"}
mod-time = {path="../mod-time"}
mod-uuid = {path="../mod-uuid"}
nix = {workspace=true, features=["fs", "signal"]}
num-format = {workspace=true}
prometheus = {workspace=true}
rcgen = {workspace=true}
regex-set-map = {path="../regex-set-map"}
rustls = {workspace=true}
serde = {workspace=true}
serde_json = {workspace=true}
throttle = {path="../throttle"}
tokio = {workspace=true, features=["full", "tracing"]}
tokio-metrics = {workspace=true}
tokio-metrics-collector = {workspace=true}
tower-http = {workspace=true}
tracing = {workspace=true}
tracing-appender = {workspace=true}
tracing-subscriber = {workspace=true}
utoipa = {workspace=true}
utoipa-rapidoc = {workspace=true}
uuid = {workspace=true, features=["v4", "fast-rng"]}
uuid-helper = {path="../uuid-helper"}
version-info = {path="../version-info"}
