[package]
name = "kumo-server-lifecycle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tracing = "0.1"
tokio = {version="1.25", features=["full", "tracing"]}
once_cell = "1.17"
uuid = {version="1.3", features=["v4", "fast-rng"]}
