[package]
name = "kumo-server-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash.workspace = true
anyhow = {workspace=true}
backtrace.workspace = true
humansize = {workspace=true}
metrics = {workspace=true}
nix = {workspace=true, features=["resource", "feature"]}
parking_lot.workspace = true
tikv-jemallocator = {workspace=true}
tikv-jemalloc-sys = {workspace=true}
tokio = {workspace=true, features=["full", "tracing"]}
tracing = {workspace=true}

[target.'cfg(target_os = "linux")'.dependencies]
cgroups-rs = {workspace=true}
