[package]
name = "kumo-server-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-channel = "1.8"
kumo-server-memory = {path="../kumo-server-memory"}
lazy_static = "1.4"
prometheus = "0.13"
tokio = {workspace=true, features=["full", "tracing"]}
tracing = "0.1"
