[package]
name = "kumo-server-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {workspace=true}
async-channel = {workspace=true}
kumo-server-memory = {path="../kumo-server-memory"}
prometheus = {workspace=true}
tokio = {workspace=true, features=["full", "tracing"]}
tracing = {workspace=true}
