[package]
name = "kumo-spf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {workspace=true}
hickory-resolver = {workspace=true}
serde = {workspace=true}
thiserror = {workspace=true}

[dev-dependencies]
hickory-proto = {workspace=true, features = ["text-parsing"]}
k9 = "0.11"
tokio = {workspace = true, features = ["full", "tracing"]}
