[package]
name = "kumo-spf"
version = "0.1.0"
edition = "2021"

[dependencies]
dns-resolver = {path="../dns-resolver"}
hickory-resolver = {workspace=true}
serde = {workspace=true}
thiserror = {workspace=true}

[dev-dependencies]
k9 = {workspace=true}
tokio = {workspace = true, features = ["full", "tracing"]}
