[package]
name = "kumo-template"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
handlebars = {workspace = true, features=["string_helpers"]}
minijinja-contrib.workspace = true
minijinja.workspace = true
mod-smtp-response-normalize = { path = "../mod-smtp-response-normalize" }
self_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
