[package]
name = "kumo-tls-helper"
version = "0.1.0"
edition = "2021"
description = "Shared TLS configuration helpers for KumoMTA"

[dependencies]
anyhow = {workspace=true}
hickory-proto = {workspace=true}
libc = {workspace=true}
linkme = {workspace=true}
lruttl = {path="../lruttl"}
openssl = {workspace=true}
rustls = {workspace=true}
rustls-pemfile = {workspace=true}
rustls-platform-verifier = {workspace=true}
thiserror = {workspace=true}
tokio = {workspace=true, features=["full"]}
tokio-openssl = {workspace=true}
tokio-rustls = {workspace=true}
tracing = {workspace=true}
