[package]
name = "libunbound-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = {version="1.0", features = ["parallel"]}
tempfile = {workspace=true}

[target.'cfg(not(any(windows, target_os="macos")))'.dependencies]
openssl-sys = {workspace=true}

[target.'cfg(any(windows, target_os="macos"))'.dependencies]
openssl-sys = { workspace=true, features=["vendored"] }
