[package]
name = "libunbound"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10"
libunbound-sys = {path="../libunbound-sys"}
thiserror = "1.0"
tokio = {workspace=true, features=["sync"]}
trust-dns-proto = "0.23"
libc = "0.2"

[dev-dependencies]
tokio = {workspace=true, features=["macros"]}
