[package]
name = "lruttl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
dashmap.workspace = true
kumo-prometheus = {path="../kumo-prometheus"}
kumo-server-memory = {path="../kumo-server-memory"}
linkme.workspace = true
parking_lot = {workspace=true}
pastey.workspace = true
rand.workspace = true
scopeguard.workspace = true
serde = {workspace=true, features=["derive"]}
tokio = {workspace=true, features=["sync"]}
tracing = {workspace=true}

[dev-dependencies]
tokio = {workspace=true, features=["test-util"]}
test-log.workspace = true
