[package]
name = "maildir"
version = "0.6.3"
authors = ["Kartikaya Gupta"]
edition = "2021"
license = "0BSD"

description = "A simple library for maildir manipulation"
readme = "README.md"
keywords = ["maildir", "email", "rfc822", "mime"]
categories = ["email", "filesystem"]
exclude = [".gitignore", ".github/**"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
mailparse = "0.14"
gethostname = "0.4"
memmap2 = { version = "0.7", optional = true }

[features]
mmap = ["memmap2"]

[dev-dependencies]
tempfile = "3.8"
walkdir = "2.3"
percent-encoding = "2.3"
